Fix overflow in readonly list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,6 +75,11 @@ code {
   height: 100%;
 }
 
+.shopping-list-board-readonly-list {
+  height: 100%;
+  overflow-y: auto;
+}
+
 .editable-shopping-list-component {
   height: 100%;
   display: flex;
@@ -90,6 +95,10 @@ code {
 
 .editable-shopping-list-component-controls {
   flex: 0 0 auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: white;
+  border-top: 1px solid #f0f0f0;
 }
 
 button.editable-shopping-list-small-add-button {
